--- a/Audio-Project/Audio-Project.vcxproj
+++ b/Audio-Project/Audio-Project.vcxproj
@@ -33,6 +33,7 @@
     <ClCompile Include="src\utils\Buffer.cpp" />
     <ClCompile Include="src\utils\Camera.cpp" />
     <ClCompile Include="src\utils\Input.cpp" />
+    <ClCompile Include="src\utils\LightManager.cpp" />
     <ClCompile Include="src\utils\Shader.cpp" />
     <ClCompile Include="src\utils\SoundManager.cpp" />
   </ItemGroup>
@@ -45,6 +46,7 @@
     <ClInclude Include="src\utils\Camera.hpp" />
     <ClInclude Include="src\utils\D3DUtility.hpp" />
     <ClInclude Include="src\utils\Input.hpp" />
+    <ClInclude Include="src\utils\LightManager.hpp" />
     <ClInclude Include="src\utils\Shader.hpp" />
     <ClInclude Include="src\utils\SoundManager.hpp" />
   </ItemGroup>
