--- a/Audio-Project/imgui.ini
+++ b/Audio-Project/imgui.ini
@@ -4,7 +4,12 @@ Size=400,400
 Collapsed=0
 
 [Window][Hello]
-Pos=5,10
-Size=231,367
+Pos=7,5
+Size=289,584
+Collapsed=0
+
+[Window][Scene]
+Pos=9,5
+Size=326,476
 Collapsed=0
 
