--- a/Audio-Project/Audio-Project.vcxproj
+++ b/Audio-Project/Audio-Project.vcxproj
@@ -29,6 +29,8 @@
     <ClCompile Include="src\graphics\importer\Mesh.cpp" />
     <ClCompile Include="src\graphics\importer\Model.cpp" />
     <ClCompile Include="src\graphics\Primitive.cpp" />
+    <ClCompile Include="src\graphics\Renderable.cpp" />
+    <ClCompile Include="src\graphics\systems\RenderSystem.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\utils\Buffer.cpp" />
     <ClCompile Include="src\utils\Camera.cpp" />
@@ -39,9 +41,12 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\graphics\Application.hpp" />
+    <ClInclude Include="src\graphics\components\Render.hpp" />
     <ClInclude Include="src\graphics\importer\Mesh.hpp" />
     <ClInclude Include="src\graphics\importer\Model.hpp" />
     <ClInclude Include="src\graphics\Primitive.hpp" />
+    <ClInclude Include="src\graphics\Renderable.hpp" />
+    <ClInclude Include="src\graphics\systems\RenderSystem.hpp" />
     <ClInclude Include="src\utils\Buffer.hpp" />
     <ClInclude Include="src\utils\Camera.hpp" />
     <ClInclude Include="src\utils\D3DUtility.hpp" />
@@ -110,20 +115,20 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <IncludePath>$(ProjectDir)/src;$(ProjectDir)/externals/fmod/lowlevel/inc;$(ProjectDir)/externals/fmod/studio/inc;$(ProjectDir)/externals/assimp/include;$(ProjectDir)/externals/imgui/include;$(IncludePath)</IncludePath>
-    <LibraryPath>$(ProjectDir)/externals/fmod/lowlevel/lib;$(ProjectDir)/externals/fmod/studio/lib;$(ProjectDir)/externals/assimp/lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(ProjectDir)/src;$(ProjectDir)/externals/fmod/lowlevel/inc;$(ProjectDir)/externals/fmod/studio/inc;$(ProjectDir)/externals/assimp/include;$(ProjectDir)/externals/imgui/include;$(ProjectDir)/externals/entityx/include;$(IncludePath)</IncludePath>
+    <LibraryPath>$(ProjectDir)/externals/fmod/lowlevel/lib;$(ProjectDir)/externals/fmod/studio/lib;$(ProjectDir)/externals/assimp/lib;$(ProjectDir)/externals/entityx/lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <IncludePath>$(ProjectDir)/src;$(ProjectDir)/externals/fmod/lowlevel/inc;$(ProjectDir)/externals/fmod/studio/inc;$(ProjectDir)/externals/assimp/include;$(ProjectDir)/externals/imgui/include;$(IncludePath)</IncludePath>
-    <LibraryPath>$(ProjectDir)/externals/fmod/lowlevel/lib;$(ProjectDir)/externals/fmod/studio/lib;$(ProjectDir)/externals/assimp/lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(ProjectDir)/src;$(ProjectDir)/externals/fmod/lowlevel/inc;$(ProjectDir)/externals/fmod/studio/inc;$(ProjectDir)/externals/assimp/include;$(ProjectDir)/externals/imgui/include;$(ProjectDir)/externals/entityx/include;$(IncludePath)</IncludePath>
+    <LibraryPath>$(ProjectDir)/externals/fmod/lowlevel/lib;$(ProjectDir)/externals/fmod/studio/lib;$(ProjectDir)/externals/assimp/lib;$(ProjectDir)/externals/entityx/lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>$(ProjectDir)/src;$(ProjectDir)/externals/fmod/lowlevel/inc;$(ProjectDir)/externals/fmod/studio/inc;$(ProjectDir)/externals/assimp/include;$(ProjectDir)/externals/imgui/include;$(IncludePath)</IncludePath>
-    <LibraryPath>$(ProjectDir)/externals/fmod/lowlevel/lib;$(ProjectDir)/externals/fmod/studio/lib;$(ProjectDir)/externals/assimp/lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(ProjectDir)/src;$(ProjectDir)/externals/fmod/lowlevel/inc;$(ProjectDir)/externals/fmod/studio/inc;$(ProjectDir)/externals/assimp/include;$(ProjectDir)/externals/imgui/include;$(ProjectDir)/externals/entityx/include;$(IncludePath)</IncludePath>
+    <LibraryPath>$(ProjectDir)/externals/fmod/lowlevel/lib;$(ProjectDir)/externals/fmod/studio/lib;$(ProjectDir)/externals/assimp/lib;$(ProjectDir)/externals/entityx/lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <IncludePath>$(ProjectDir)/src;$(ProjectDir)/externals/fmod/lowlevel/inc;$(ProjectDir)/externals/fmod/studio/inc;$(ProjectDir)/externals/assimp/include;$(ProjectDir)/externals/imgui/include;$(IncludePath)</IncludePath>
-    <LibraryPath>$(ProjectDir)/externals/fmod/lowlevel/lib;$(ProjectDir)/externals/fmod/studio/lib;$(ProjectDir)/externals/assimp/lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(ProjectDir)/src;$(ProjectDir)/externals/fmod/lowlevel/inc;$(ProjectDir)/externals/fmod/studio/inc;$(ProjectDir)/externals/assimp/include;$(ProjectDir)/externals/imgui/include;$(ProjectDir)/externals/entityx/include;$(IncludePath)</IncludePath>
+    <LibraryPath>$(ProjectDir)/externals/fmod/lowlevel/lib;$(ProjectDir)/externals/fmod/studio/lib;$(ProjectDir)/externals/assimp/lib;$(ProjectDir)/externals/entityx/lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -134,7 +139,7 @@
       <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>d3d11.lib;d3dcompiler.lib;fmodL_vc.lib;fmodstudioL_vc.lib;assimp-vc140-mt.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>d3d11.lib;d3dcompiler.lib;fmodL_vc.lib;fmodstudioL_vc.lib;assimp-vc140-mt.lib;entityx-d.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -146,7 +151,7 @@
       <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>d3d11.lib;d3dcompiler.lib;fmodL_vc.lib;fmodstudioL_vc.lib;assimp-vc140-mt.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>d3d11.lib;d3dcompiler.lib;fmodL_vc.lib;fmodstudioL_vc.lib;assimp-vc140-mt.lib;entityx-d.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -162,7 +167,7 @@
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>d3d11.lib;d3dcompiler.lib;fmodL_vc.lib;fmodstudioL_vc.lib;assimp-vc140-mt.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>d3d11.lib;d3dcompiler.lib;fmodL_vc.lib;fmodstudioL_vc.lib;assimp-vc140-mt.lib;entityx-d.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -178,7 +183,7 @@
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>d3d11.lib;d3dcompiler.lib;fmodL_vc.lib;fmodstudioL_vc.lib;assimp-vc140-mt.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>d3d11.lib;d3dcompiler.lib;fmodL_vc.lib;fmodstudioL_vc.lib;assimp-vc140-mt.lib;entityx-d.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
